style(font): use IBM Plex Sans font for Arabic texts and change the website title

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,6 +64,10 @@
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
   }
+
+  [dir="rtl"] {
+    font-family: var(--font-ibm-plex-sans-arabic);
+  }
 }
  
 @layer base {
@@ -73,4 +77,8 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+.font-ibm-plex-sans-arabic {
+  font-family: var(--font-ibm-plex-sans-arabic);
 }
