feat: add temporary "Congrats" message

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -117,3 +117,7 @@
   scrollbar-width: thin;
   scrollbar-color: hsl(var(--muted-foreground)/0.3) transparent;
 }
+
+.notification-bar {
+  @apply bg-muted text-foreground py-2 text-center;
+}
